# Backend/products/docs/swagger.yaml
@@ -5,11 +5,11 @@ definitions:
     properties:
       details:
         description: Detailed error message with multiple examples
-        example: 'ProductPrice: cannot be empty or zero, Product not found'
+        example: Product not found
         type: string
       error:
         description: Error message with example value
-        example: Error updaing product
+        example: Error fetching product
         type: string
     type: object
   model.Product:
@@ -52,9 +52,11 @@ definitions:
         example: 123
         type: integer
     type: object
-host: localhost:8080
+host: unibazaar-products.azurewebsites.net
 info:
-  contact: {}
+  contact:
+    email: avaneesh.khandekar@gmail.com
+    name: Avaneesh Khandekar
   description: API for managing products in the UniBazaar marketplace for university
     students.
   title: UniBazaar Products API
@@ -154,7 +156,7 @@ paths:
       summary: Create a new product
       tags:
       - Products
-  /products/{UserId}:
+  /products/{userId}:
     get:
       consumes:
       - application/json
@@ -163,7 +165,7 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: UserId
+        name: userId
         required: true
         type: integer
       - description: ID of the last product to fetch
@@ -198,19 +200,19 @@ paths:
       summary: Get all products for a specific user by user ID
       tags:
       - Products
-  /products/{UserId}/{ProductId}:
+  /products/{userId}/{productId}:
     delete:
       description: Delete a product from the system based on the user ID and product
         ID. This also removes the associated image from S3 if available.
       parameters:
       - description: User ID
         in: path
-        name: UserId
+        name: userId
         required: true
         type: integer
       - description: Product ID
         in: path
-        name: ProductId
+        name: productId
         required: true
         type: string
       responses:
@@ -239,12 +241,12 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: UserId
+        name: userId
         required: true
         type: integer
       - description: Product ID
         in: path
-        name: ProductId
+        name: productId
         required: true
         type: string
       - description: Product Details
@@ -275,25 +277,19 @@ paths:
       summary: Update a product by user ID and product ID
       tags:
       - Products
-  /search/products:
+  /products/search:
     get:
-      consumes:
-      - application/json
-      description: Search for products in the system based on the query string. Returns
-        a list of products matching the search criteria, with a limit on the number
-        of results.
+      description: Searches products based on a query and optional limit.
       parameters:
-      - description: Search query for products
+      - description: Search query
         in: query
         name: query
         required: true
         type: string
-      - description: Number of products to fetch (default is 10)
+      - description: Limit the number of results
         in: query
         name: limit
         type: integer
-      produces:
-      - application/json
       responses:
         "200":
           description: List of products matching the search query
@@ -302,14 +298,20 @@ paths:
               $ref: '#/definitions/model.Product'
             type: array
         "400":
-          description: Search query is required
+          description: Invalid request or missing query parameter
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "404":
+          description: No products found for the given query
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
-      summary: Search for products based on a query
+      summary: Search products
       tags:
       - Products
+schemes:
+- https
 swagger: "2.0"
